--- a/frontend/pages/login/index/index.wxss
+++ b/frontend/pages/login/index/index.wxss
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 100rpx;
+  margin-bottom: 60rpx;
 }
 
 .logo {
@@ -51,6 +51,81 @@
   text-align: center;
 }
 
+/* 头像选择区域 */
+.avatar-section {
+  width: 100%;
+  margin-bottom: 32rpx;
+}
+
+.section-title {
+  font-size: 24rpx;
+  color: #333;
+  margin-bottom: 16rpx;
+  display: block;
+}
+
+.avatar-container {
+  display: flex;
+  justify-content: center;
+}
+
+.avatar-button {
+  width: 160rpx;
+  height: 160rpx;
+  border-radius: 80rpx;
+  background-color: #f0f0f0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
+.avatar {
+  width: 160rpx;
+  height: 160rpx;
+  border-radius: 80rpx;
+}
+
+.avatar-placeholder {
+  position: absolute;
+  width: 160rpx;
+  height: 160rpx;
+  border-radius: 80rpx;
+  background-color: rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.avatar-placeholder-text {
+  font-size: 20rpx;
+  color: #999;
+}
+
+/* 昵称输入区域 */
+.nickname-section {
+  width: 100%;
+  margin-bottom: 48rpx;
+}
+
+.nickname-input {
+  width: 100%;
+  height: 80rpx;
+  background-color: #fff;
+  border-radius: 40rpx;
+  padding: 0 32rpx;
+  font-size: 24rpx;
+  color: #333;
+  border: 1rpx solid #e0e0e0;
+}
+
+.nickname-input::placeholder {
+  color: #999;
+}
+
+/* 登录按钮 */
 .login-button {
   width: 100%;
   height: 88rpx;
@@ -65,6 +140,12 @@
   justify-content: center;
 }
 
+.login-button:disabled {
+  background-color: #ccc;
+  color: #fff;
+}
+
+/* 登录信息 */
 .login-info {
   font-size: 20rpx;
   color: #999;
@@ -84,7 +165,7 @@
 /* 响应式设计 */
 @media (max-width: 375px) {
   .login-header {
-    margin-bottom: 80rpx;
+    margin-bottom: 40rpx;
   }
   
   .logo {
@@ -98,6 +179,18 @@
   
   .slogan {
     font-size: 20rpx;
+  }
+  
+  .avatar-button {
+    width: 140rpx;
+    height: 140rpx;
+    border-radius: 70rpx;
+  }
+  
+  .avatar {
+    width: 140rpx;
+    height: 140rpx;
+    border-radius: 70rpx;
   }
   
   .login-button {
