feat: add avavtar

--- a/frontend/components/navbar/index.wxml
+++ b/frontend/components/navbar/index.wxml
@@ -10,6 +10,12 @@
     </view>
   </view>
   <view class="navbar-right">
+    <view class="user-avatar" wx:if="{{userInfo && userInfo.avatarUrl}}">
+      <image src="{{userInfo.avatarUrl}}" mode="aspectFill" class="avatar-image" />
+    </view>
+    <view class="user-avatar placeholder" wx:else>
+      <text class="avatar-placeholder">👤</text>
+    </view>
     <view class="theme-switcher">
       <text class="theme-icon">🌙</text>
     </view>
