--- a/frontend/pages/index/index.wxml
+++ b/frontend/pages/index/index.wxml
@@ -3,6 +3,7 @@
   <navbar 
     menuOpen="{{menuOpen}}" 
     bind:toggleMenu="handleMenuToggle"
+    userInfo="{{userInfo}}"
   />
   
   <!-- 主内容区 -->
