--- a/frontend/pages/login/index/index.wxss
+++ b/frontend/pages/login/index/index.wxss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  height: 100vh;
   background-color: #f5f5f5;
   padding: 40rpx 20rpx;
 }
